# kctl-rs

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: cmd.rs  command.rs  main.rs
src/subcommand/: auth.rs  mod.rs  request.rs  request_cmd.rs  resource_cmd.rs
src/subcommand/api/: api_group.rs  mod.rs
src/subcommand/api/resources/: namespace.rs
src/subcommand/api/resources/namespaced/: pod.rs  service.rs
src/subcommand/methods/: delete.rs  get.rs  patch.rs  post.rs  put.rs
src/subcommand/resources/: mod.rs  resource_definition.rs  resource_type.rs
src/subcommand/resources/k8s/: customresourcedefinition.rs  mod.rs  namespace.rs  pod.rs  resource_definition.rs
src/subcommand/resources/k8s/namespaced/: mod.rs  pod.rs
