[package]
name = "kctl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.90.0", features = ["client"] }
k8s-openapi = { version = "0.21.1", features = ["latest"] }
bpaf = { version = "0.9.11", features = ["derive"] }
